--- a/style.css
+++ b/style.css
@@ -12,23 +12,23 @@ body {
     display: none;
 }
 .login {
-    padding: 1rem;
+    padding: 1rem 0.5rem;
     position: absolute;
-    width: 90%;
+    width: 100%;
     top: 30%;
-    left: 4%;
+    left: 0;
 }
 .login form {
     margin: 0 auto;
-    width: 80%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
 .login form input {
-    padding: 0.5rem;
-    width: 70%;
-    margin: 0 auto 2%;
+    padding: 0.9rem;
+    width: 100%;
+    margin: 0 auto 3%;
     border: 1px solid cyan;
     border-radius: 45px;
 }
@@ -36,13 +36,13 @@ body {
     padding-left: 5%;
 }
 .login form button {
-    margin: 0 auto;
+    margin: 2% auto 0;
     width: 50%;
     background-color: blueviolet;
     color: white;
     border: 1px solid blueviolet;
     border-radius: 45px;
-    padding: 0.5rem;
+    padding: 1rem 0;
 }
 .login form button:hover {
     font-weight: 600;
@@ -67,6 +67,7 @@ section form {
 }
 section form label {
     width: 35%;
+    
 }
 section form label input, button {
     width: 100%;
@@ -80,6 +81,7 @@ section:nth-child(1) {
 section:nth-child(1) form label input {
     background-color: skyblue;
     border: 1px solid skyblue;
+    margin-bottom: 10%;
 }
 section:nth-child(2) {
     backdrop-filter: blur(50px);
@@ -91,6 +93,7 @@ section:nth-child(2) form  label{
 section:nth-child(2) form label input {
     background-color: rgba(0, 128, 0, 0.21);
     border: 1px solid rgba(0, 128, 0, 0.21);
+    margin-bottom: 10%;
 }
 section:nth-child(3) {
     backdrop-filter: blur(30px);
@@ -100,6 +103,7 @@ section:nth-child(3) form label input {
     background-color: rgba(255, 0, 255, 0.198);
     border: 1px solid rgba(255, 0, 255, 0.198);
     backdrop-filter: blur(50px);
+    margin-bottom: 10%;
 }
 button {
     width: 20%;
