--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;500;700&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +8,7 @@
 }
 body {
     background-color: rgba(245, 245, 220, 0.426);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Zen Maru Gothic', sans-serif;
     min-height: 100vh;
 }
 .container {
@@ -53,6 +56,9 @@ body {
     background-color: blue;
     border:1px solid blue;
 }
+h1 #user {
+    color: #3c3cfeb9;
+}
 .bal {
     display: flex;
     align-items: center;
@@ -62,7 +68,8 @@ body {
 
 }
 .bal h2 {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
+    color: #5cbd559b;
 }
 .bal h3 {
     padding: 2% 0;
@@ -72,6 +79,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 2px;
+    color: #000000ac;
 }
 .transaction-summary {
     display: flex;
@@ -84,6 +92,7 @@ body {
     min-height: 200px;
     height: 200px;
     overflow-y: scroll;
+    font-weight: 500;
     border: 1px solid rgba(210, 215, 221, 0.304);
     background-color: rgba(210, 215, 221, 0.304);
 }
@@ -131,7 +140,7 @@ section form {
 }
 section form label {
     width: 35%;
-    
+    font-weight: 500;
 }
 section form label input, button {
     width: 100%;
@@ -170,9 +179,10 @@ section:nth-child(3) form label input {
     margin-bottom: 10%;
 }
 button {
-    width: 20%;
+    width: 25%;
     border: 1px solid white;
     background-color: white;
+    font-weight: 700;
 }
 
 
@@ -203,9 +213,11 @@ button {
     main {
         display: flex;
         justify-content: space-around;
+        align-items: center;
     }
     .transaction-summary {
         width: 50%;
+        height: 200px;
     }
     .make-transactions {
         width: 45%;
