--- a/style.css
+++ b/style.css
@@ -179,7 +179,22 @@ button {
     background-color: white;
     font-weight: 700;
 }
-
+#credit-debit-summary {
+    font-weight: 700;
+    font-size: 1.3rem;
+    margin: 5% auto;
+    padding: 0.5rem;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    text-align: center;
+}
+#credit {
+    color: #5cbd55;
+}
+#debit {
+    color: #ff0000;
+}
 
 @media screen and (min-width: 40em) and (max-width:60em) {
     body {
@@ -211,6 +226,7 @@ button {
     .make-transactions {
         width: 45%;
     }
+    
 }
 
 @media screen and (min-width: 60em) {
